# COSMOS_TGP

./: .gitignore  LICENSE  LICENSE_COMMERCIAL_EN.md  LICENSE_COMMERCIAL_KO.md  README.md  SECURITY.md  cosmos_tgp.py  pyproject.toml  requirements.txt  setup.py
scripts/: test_simple.py
sjzip/: __init__.py  alphabet.py  codec.py  dot.py  front_space.py  mapper.py
sjzip/optimizations/: __init__.py  hilbert_optimizer.py  integer_scaler.py  optimized_sjzip.py  quaternion_optimizer.py
tests/: __init__.py  test_codec.py  test_security.py
